--- a/index.html
+++ b/index.html
@@ -1,11 +1,2 @@
 <!DOCTYPE html>
-<html>
-<head>
-</head?
-<body>
-
-<a class="twitter-timeline" href="https://twitter.com/propagandopolis>Tweets by Propagandopolis</a>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-</body>
-</html>
+<a class="twitter-timeline" href="https://twitter.com/propagandopolis?ref_src=twsrc%5Etfw">Tweets by propagandopolis</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
