--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<!DOCTYPE html>
-<a class="twitter-timeline" href="https://twitter.com/propagandopolis?ref_src=twsrc%5Etfw">Tweets by propagandopolis</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+
+<a class="twitter-timeline" href="https://twitter.com/DrKatDickson">
+Tweets by DrKatDickson
+</a>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8></script>
+
+</body>
+</html>
