--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 
-<a class="twitter-timeline" href="https://twitter.com/DrKatDickson">
-Tweets by DrKatDickson
+<a class="twitter-timeline" href="https://twitter.com/propagandopolis?ref_src=twsrc%5Etfw">
+Tweets by propagandopolis
 </a>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8></script>
 
